syntax = "proto2";

package tv.twitchbot.common.dto.proto.core;

message Bot {
    extensions 100 to max;

    enum Type {
        TWITCH = 1;
        DISCORD = 2;
    }

    required string name = 1;
    required Type type = 2;
}

message TwitchBot {
    extend Bot {
        optional TwitchBot data = 101;
    }
}

message DiscordBot {
    extend Bot {
        optional DiscordBot data = 102;
    }
}